# aya-core-relocations

./: Cargo.toml  LICENSE  README.md
aya-core-relocations/: Cargo.toml  build.rs
aya-core-relocations-common/: Cargo.toml
aya-core-relocations-ebpf/: Cargo.toml
aya-core-relocations-ebpf/src/: main.rs
aya-core-relocations/src/: main.rs
