[package]
name = "aya-core-relocations-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
aya-core-relocations-common = { path = "../aya-core-relocations-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "aya-core-relocations"
path = "src/main.rs"
